# test_multi_DB_django

./: README.md
022-Multiple-Database-Configuration/: pyproject.toml
022-Multiple-Database-Configuration/core/: settings.py  urls.py
022-Multiple-Database-Configuration/crash_game/: admin.py  apps.py  enums.py  models.py  urls.py  views.py
022-Multiple-Database-Configuration/crash_game/migrations/: 0001_initial.py  0002_crash_game_test1_crash_game_test2_crash_game_test3.py  0003_bet_bound_game_player_round_round_unique_round_and_more.py  0004_delete_game.py  0005_delete_crash_game_test1_delete_crash_game_test2_and_more.py
022-Multiple-Database-Configuration/crash_game/modelos/: __init__.py  bet.py  bound.py  model1.py  model2.py  model3.py  player.py  round.py
022-Multiple-Database-Configuration/organization/: models.py  urls.py  views.py
022-Multiple-Database-Configuration/organization/migrations/: 0001_initial.py
022-Multiple-Database-Configuration/routers/: db_routers.py
models_guide/: manage.py
models_guide/migrations/: models.py
test_multi_DB/test_multi_DB/: asgi.py  settings.py  urls.py  wsgi.py
