[tool.poetry]
name = "back-office"
version = "0.1.0"
description = ""
authors = ["hans1801 <hansacha.1801@gmail.com>"]
readme = "README.md"
packages = [{include = "back_office"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
mergedeep = "^1.3.4"
pydantic = "^1.10.8"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
fastapi = "0.86.0"
mangum = "^0.17.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
requests = "^2.31.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
fastapi-debug-toolbar = "^0.3.2"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
